# rust-csharp-integration

./: .gitignore
csharp/RustIntegration/: RustIntegration.sln
csharp/RustIntegration/RustIntegration/: Program.cs  RustIntegration.csproj  librust.dylib
rust/: Cargo.toml
rust/src/: lib.rs
